--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,21 @@
+ddm (2.2.8) debian; urgency=low
+
+  * Handle --force-yes in /usr/bin/ddm for Stretch
+
+ -- Arjen Balfoort <arjenbalfoort@solydxk.com>  Wed, 08 Jun 2016 11:47:26 +0200
+
+ddm (2.2.7) debian; urgency=low
+
+  * Use open-as-user to open browser as real user
+
+ -- Arjen Balfoort <arjenbalfoort@solydxk.com>  Wed, 01 Jun 2016 18:32:50 +0200
+
+ddm (2.2.6) debian; urgency=low
+
+  * Updated translations
+
+ -- Arjen Balfoort <arjenbalfoort@solydxk.com>  Tue, 16 Feb 2016 18:00:00 +0100
+
 ddm (2.2.5) debian; urgency=low
 
   * Flat logo in background information pages
